--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -16,7 +16,7 @@ $body-bg: #fff;
 $default-color-dark: #98a0ac;
 $default-shade-dark: #353535;
 $default-tint-dark: #aaa;
-$shadow-color-dark: rgba(0, 0, 0, .2);
+$shadow-color-dark: rgba(255, 255, 255, .2);
 $code-color-dark: #db1400;
 $body-bg-dark: #0F1216;
 
